--- a/emojichooser/build.gradle
+++ b/emojichooser/build.gradle
@@ -5,9 +5,8 @@ apply plugin: "com.jfrog.bintray"
 version = "0.0.1"
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
-
+    compileSdkVersion 17
+    buildToolsVersion '21.1.2'
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
@@ -19,21 +18,19 @@ android {
             assets.srcDirs = ['assets']
         }
     }
-
     defaultConfig {
-        minSdkVersion 17
-        targetSdkVersion 22
+        minSdkVersion 14
+        targetSdkVersion 17
         versionCode 1
-        versionName "1.0"
+        versionName '0.0.1'
     }
-
     buildTypes {
+    }
+    productFlavors {
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
 }
 
 def siteUrl = 'https://github.com/mrwonderman/emoji-chooser'
