--- a/exampleapp/AndroidManifest.xml
+++ b/exampleapp/AndroidManifest.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ch.haclyon.emojichooser.example" >
+    package="ch.halcyon.emojichooser.example"
+    android:versionCode="1"
+    android:versionName="1.0">
+
+    <uses-sdk
+        android:minSdkVersion="14"
+        android:targetSdkVersion="17" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="EmojiChooser Example"
+        android:theme="@android:style/Theme.Holo.Light" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name="ch.halcyon.emojichooser.example.MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
